# nime-led-visuals

./: .gitignore  FFT_LEAKAGE_ANALYSIS.md  README.md  debug_fft.py  pixi.toml  pyproject.toml  run_file.sh  run_leds.sh  run_live.sh  test_40hz.py  test_leds.py
docs/: CODE_GUIDE.md  HARDWARE_SETUP.md
scripts/: analyze_audio.py  audio_analyzer.py  audio_input.py  config.py  debug_led_mapping.py  effects.py  main.py  test_audio.py  test_harmonics.py  test_led.py
scripts/shell/: install-service.sh  run_file.sh  run_leds.sh  run_live.sh  setup-all.sh  setup-pi.sh  setup-wifi.sh
scripts/tests/: test_40hz_isolation.py  test_audio.py  test_complete_pipeline.py  test_gpio21.py  test_gpio_health.py  test_instrument_range.py  test_led.py  test_led_viz.py  test_spectrum_viz.py
