[project]
name = "nime-led-visuals"
version = "0.1.0"
description = "Audio-reactive LED visualization for Daisy Seed on Raspberry Pi"
authors = [{name = "Justin Johnson", email = "justinaugustejohnson@gmail.com"}]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.13.*"
numpy = ">=1.26.0"
scipy = ">=1.13.0"
librosa = ">=0.11.0"

[tool.pixi.tasks]
test-audio = "python scripts/test_audio.py music/test.mp3"
test-leds = "bash run_leds.sh"
run-file = "python scripts/main.py --file test.mp3"
run-live = "bash run_live.sh"

[tool.pixi.pypi-dependencies]
adafruit-blinka = {version = ">=8.0.0", markers = "platform_machine == 'aarch64'"}
rpi-ws281x = {version = ">=5.0.0", markers = "platform_machine == 'aarch64'"}
adafruit-circuitpython-neopixel = {version = ">=6.3.18", markers = "platform_machine == 'aarch64'"}
adafruit-circuitpython-led-animation = {version = ">=2.12.4", markers = "platform_machine == 'aarch64'"}
